--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^2.7.0",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-obj-loader": "^1.0.4"
   },
   "dependencies": {
-    "webvr-polyfill": "^0.9.38",
     "gsap": "^1.20.2",
-    "three": "^0.87.1"
+    "three": "^0.87.1",
+    "three-obj-loader": "^1.1.3",
+    "three-orbit-controls": "^82.1.0",
+    "three-pointer-lock-controls": "^1.0.0",
+    "three-pointerlock": "0.0.2",
+    "webvr-polyfill": "^0.9.38"
   }
 }
