--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.1",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
     "raw-loader": "^0.5.1",
     "script-loader": "^0.7.0",
+    "ttf-loader": "^1.0.2",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^2.7.0",
